fix(Navigation/MapNode): do not wrap escaped characters

--- a/packages/ui/src/ui/pages/navigation/content/MapNode/MapNodesTable.scss
+++ b/packages/ui/src/ui/pages/navigation/content/MapNode/MapNodesTable.scss
@@ -29,7 +29,7 @@
 
             .escape {
                 word-spacing: 5px;
-                white-space: pre-wrap;
+                white-space: pre;
                 background-color: var(--error-background);
             }
 
